# mecatahumanoid

./: generate_chessboard.py
01_planning/: hardware_specs.md
02_daily_logs/: template.md
03_learning/: calibration_guide.md  github_learning.md
motcap/: humarm_right.urdf  rightarmviz.py
src/: readme.md
src/combined/: CMakeLists.txt  readme.md
src/combined/config/: nav2_params.yaml  ros2_control.yaml  slam.yaml
src/combined/launch/: all_in_one.launch.py  combined_rover_rviz.launch.py  rviz.launch.py  rviz_teleop.launch.py
src/combined/scripts/: fake_gps.py  fake_imu.py  fake_lidar.py  gps_to_tf.py  imu_from_cmdvel.py  monitor_motion.py  teleop_rviz.py  world_obstacles.py
src/combined/urdf/: combined_rover.urdf  rover.urdf.xacro
src/humarm_ros2/: CMakeLists.txt  eemonitor.sh  package.xml
src/humarm_ros2/config/: ros2_control.yaml
src/humarm_ros2/launch/: simv2.launch.py  spawn_robot.launch.py  viz.launch.py  vizcon.launch.py
src/humarm_ros2/scripts/: eemonitor.py  joint2can.py  moveit2can.py
src/humarm_ros2/urdf/: humarmv2.urdf.xacro
src/rover/: CMakeLists.txt  package.xml
src/rover/launch/: rviz.launch.py  teleop.launch.py
src/rover/scripts/: monitor_motion.py  teleop_rviz.py
src/rover/urdf/: rover.urdf.xacro
src/torso/: CMakeLists.txt  package.xml
src/torso/config/: ros2_control.yaml  torso_rviz.rviz
src/torso/launch/: viz.launch.py
src/torso/urdf/: torso.urdf.xacro
vision/: readme.md
vision/01_planning/: timeline.md
vision/06_resources/: links.md
